新增百度流量统计

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -24,6 +24,12 @@
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
   -->
+
+	<!-- add baidu analysis -->
+	<script type="text/javascript">
+		var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+		document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F505678961fbaf20ca2f6e9444dcd3d23' type='text/javascript'%3E%3C/script%3E"));
+	</script>
   </head>
 
   <body>
