--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -57,6 +57,9 @@
         <p>&copy; {{ site.author.name }} 2012 
           with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
           and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
+		<!-- add cnzz analysis -->
+		<script src="http://s95.cnzz.com/stat.php?id=4235910&web_id=4235910&show=pic" language="JavaScript"></script>
+
         </p>
       </footer>
 
